2023-06-22. Несуществующие маршруты (404 page). Лоадер загрузки страниц

--- a/02_Module/21/public/locales/en/translation.json
+++ b/02_Module/21/public/locales/en/translation.json
@@ -2,5 +2,6 @@
     "Мой перевод": "My translation",
     "Перевод": "Translate",
     "Главная": "Main",
-    "Язык": "English"
+    "Язык": "English",
+    "Страница не существует": "Page not found"
 }
