--- a/02_Module/21/public/locales/ru/translation.json
+++ b/02_Module/21/public/locales/ru/translation.json
@@ -2,5 +2,6 @@
     "Мой перевод": "Мой Перевод",
     "Перевод": "Перевод",
     "Главная": "Главная",
-    "Язык": "Русский"
+    "Язык": "Русский",
+    "Страница не существует": "Страница не существует"
 }
